--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="notification">Notification</string>
     <string name="search">Search</string>
     <string name="profile">Profile</string>
+    <string name="search_light">Search...</string>
 </resources>
