--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="search">Search</string>
     <string name="profile">Profile</string>
     <string name="search_light">Search...</string>
+    <string name="description">Description</string>
 </resources>
