--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="profile">Profile</string>
     <string name="search_light">Search...</string>
     <string name="description">Description</string>
+    <string name="add_a_comment">Add a comment...</string>
+    <string name="post">POST</string>
 </resources>
